modify hero heading

--- a/index.html
+++ b/index.html
@@ -139,11 +139,9 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>I'm a passionate UI/UX designer focused on crafting clean, intuitive digital experiences.
-With a strong eye for detail, I blend form and function to create seamless interfaces.
-I specialize in user-centered design, ensuring every pixel serves a purpose.
-My toolkit includes Figma, Adobe XD, and modern front-end frameworks.
-I'm always exploring new design trends to deliver impactful and innovative solutions.</p>
+								<p>Highly ambitious, I have a clear, logical mind with a practical approach to problem solving and a
+drive to see things through to completion. I have a great eye for detail. I am eager to learn, I
+enjoy overcoming challenges.</p>
 								<p class="colorlib-social-icons">
 									<a href="#"><i class="icon-facebook4"></i></a>
 									<a href="#"><i class="icon-twitter3"></i></a>
