--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>5 - Lions Club International (2010-present)</h3>
+											<h3>5 - Lions Club International </h3>
+											<p>	(2010-present)</p>
 											<ul>
 												<li>Director at Leo Club of Dhaka TMSS, July 5, 2016</li>
 												<li>Region Director at Leo District Council</li>
