some changes in the numbering

--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@ Dhaka, Bangladesh (AIUB)</p>
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>4 - Cashier | Gash Station (AUGUST 15, 2023-PRESENT)</h3>
+											<h3>6 - Cashier </h3>
+											<p>Gash Station (AUGUST 15, 2023-PRESENT)</p>
 											<ul>
 												<li>Working respectfully till now</li>
 												
