modify the experience one more time

--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
 											<p>Olivine Limited (2020-2022)</p>
 											<ul>
 												<li>Create test plan, test case and manual testing</li>
+												<li>Create test plan, test case and manual testing</li>
+												<li>Create test plan, test case and manual testing</li>
 												
 											</ul>
 										</div>
@@ -225,6 +227,8 @@ Dhaka, Bangladesh (AIUB)</p>
 											<h3>6 - Cashier </h3>
 											<p>Gash Station (AUGUST 15, 2023-PRESENT)</p>
 											<ul>
+												<li>Working respectfully till now</li>
+												<li>Working respectfully till now</li>
 												<li>Working respectfully till now</li>
 												
 											</ul>
