--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>Highly ambitious and detail oriented, I bring a clear.</p>
+								<p>Highly ambitious and detail oriented, I bring a clear, logical mindset and a practical approach to problem-solving. I am motivated by challenges and committed to seeing projects through to completion. With a strong desire to learn and grow, I thrive in environments that encourage initiative and continuous improvement.</p>
 								<p class="colorlib-social-icons">
 									<a href="#"><i class="icon-facebook4"></i></a>
 									<a href="#"><i class="icon-twitter3"></i></a>
@@ -269,6 +269,8 @@ Dhaka, Bangladesh (AIUB)</p>
 Macon, Georgia</h3>
 											<ul>
 												<li>MSc in Information technology</li>
+												<li>MSc in Information technology</li>
+												<li>MSc in Information technology</li>
 												
 											</ul>
 										</div>
@@ -279,6 +281,8 @@ Macon, Georgia</h3>
 											<h3>American International University-Bangladesh (AIUB), Bangladesh</h3>
 											<ul>
 												<li>BSc in Computer Science and Engineering</li>
+												<li>CGPA: 3.00 out of 4.00</li>
+												<li>CGPA: 3.00 out of 4.00</li>
 												<li>CGPA: 3.00 out of 4.00</li>
 												
 											</ul>
