--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>Highly ambitious and detail oriented, I bring a clear, logical mindset and a practical approach to problem-solving. I am motivated by challenges and committed to seeing projects through to completion. With a strong desire to learn and grow, I thrive in environments that encourage initiative and continuous improvement.</p>
+								<p>My adventure began in my birth country and ended in my ideal country, where I pursued my master's degree and had the opportunity to go further. I participated in many theatrical performances throughout my master's program. Eager to learn more and expand my horizons to contribute.</p>
 								<p class="colorlib-social-icons">
 									<a href="#"><i class="icon-facebook4"></i></a>
 									<a href="#"><i class="icon-twitter3"></i></a>
