--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
 								</div>
 								<p>My adventure began in my birth country and ended in my ideal country, where I pursued my master's degree and had the opportunity to go further. I participated in many theatrical performances throughout my master's program. Eager to learn more and expand my horizons to contribute.</p>
 								<p class="colorlib-social-icons">
-									<a href="#"><i class="icon-facebook4"></i></a>
-									<a href="#"><i class="icon-twitter3"></i></a>
-									<a href="#"><i class="icon-github"></i></a>
-									<a href="#"><i class="icon-dribbble2"></i></a>
+									<a href="https://www.linkedin.com/in/mohon-raihan-8043b1379/"><i class="icon-linkedin2"></i></a>
+									<a href="https://www.behance.net/mohonraihan "><i class="icon-behance2"></i></a>
+									<a href="https://github.com/mohon1020"><i class="icon-github"></i></a>
+								
 								</p>
 								<p><a href="#" class="btn btn-primary btn-outline">Contact Me!</a></p>
 							</div>
@@ -388,7 +388,7 @@ Macon, Georgia</h3>
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-1.jpg);">
+							<a href="work.html" class="work-img" style="background-image: url(images/House_Mockup.png);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Pursuing Best</h2>
@@ -405,7 +405,7 @@ Macon, Georgia</h3>
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-2.jpg);">
+							<a href="work.html" class="work-img" style="background-image: url(images//Laptop\ For\ Future\ Mockup.png);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Coordinates</h2>
@@ -422,7 +422,7 @@ Macon, Georgia</h3>
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-3.jpg);">
+							<a href="work.html" class="work-img" style="background-image: url(images/Property\ Listing.png);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Cristall</h2>
@@ -439,7 +439,7 @@ Macon, Georgia</h3>
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/work-4.jpg);">
+							<a href="work.html" class="work-img" style="background-image: url(images/Rent\ Mockup.png);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Black</h2>
@@ -489,7 +489,7 @@ Macon, Georgia</h3>
 										</div>
 									</a>
 									<div class="desc">
-										<span class="meta">15, Feb 2018</span>
+										<span class="meta">15, Feb 2025</span>
 										<h2><a href="blog.html">A Japanese Constellation</a></h2>
 										<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
 									</div>
@@ -507,7 +507,7 @@ Macon, Georgia</h3>
 										</div>
 									</a>
 									<div class="desc">
-										<span class="meta">15, Feb 2018</span>
+										<span class="meta">15, Feb 2025</span>
 										<h2><a href="blog.html">A Japanese Constellation</a></h2>
 										<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
 									</div>
@@ -525,7 +525,7 @@ Macon, Georgia</h3>
 										</div>
 									</a>
 									<div class="desc">
-										<span class="meta">15, Feb 2018</span>
+										<span class="meta">15, Feb 2025</span>
 										<h2><a href="blog.html">A Japanese Constellation</a></h2>
 										<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
 									</div>
