add project details

--- a/index.html
+++ b/index.html
@@ -397,7 +397,10 @@ Macon, Georgia</h3>
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Designed and developed a modern, responsive website with a clean and intuitive UI.
+Focused on delivering a seamless user experience across all devices.
+Implemented smooth navigation, engaging interactions, and consistent branding.
+Optimized layout and performance to enhance usability and retention.</p>
 									<p class="read"><a href="#">View details</a></p>
 								</div>
 							</div>
@@ -414,7 +417,10 @@ Macon, Georgia</h3>
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Crafted a user-friendly landing page with a modern, minimal design.
+Ensured mobile-first responsiveness and cross-browser compatibility.
+Added interactive elements for smooth engagement and usability.
+Delivered a fast, SEO-optimized, and visually appealing experience.</p>
 									<p class="read"><a href="#">View Details</a></p>
 								</div>
 							</div>
@@ -431,8 +437,10 @@ Macon, Georgia</h3>
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
+									<p>Redesigned an e-commerce website with a clean, intuitive UI.
+Focused on improving navigation and simplifying the checkout flow.
+Enhanced visuals with consistent branding and product-focused layouts.
+Boosted user satisfaction through better usability and performance.</a></p>
 								</div>
 							</div>
 						</div>
@@ -448,7 +456,10 @@ Macon, Georgia</h3>
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Developed a dashboard interface with a sleek, professional look.
+Organized data into clear sections for easy access and readability.
+Integrated interactive charts and components for better user insights.
+Delivered a responsive, high-performance UI with seamless UX.</p>
 									<p class="read"><a href="#">View details</a></p>
 								</div>
 							</div>
