--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Noah Template</title>
+	<title>Mohon Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -67,7 +67,7 @@
 					<div class="col-md-12">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="services.html">Services</a></li>
+							<li><a href="services.html">Experience</a></li>
 							<li><a href="work.html">Work</a></li>
 							<li class="active"><a href="blog.html">Blog</a></li>
 							<li><a href="about.html">About</a></li>
@@ -78,13 +78,13 @@
 				<div class="row">
 					<div class="col-md-12">
 						<h2 class="head-title">Works</h2>
-						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
+						<a href="images/project1.png" class="gallery image-popup-link text-center" style="background-image: url(images/project1.png);">
 							<span><i class="icon-search3"></i></span>
 						</a>
-						<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
+						<a href="images/project2.png" class="gallery image-popup-link text-center" style="background-image: url(images/project2.png);">
 							<span><i class="icon-search3"></i></span>
 						</a>
-						<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
+						<a href="images/project3.png" class="gallery image-popup-link text-center" style="background-image: url(images/project3.png);">
 							<span><i class="icon-search3"></i></span>
 						</a>
 						<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
@@ -102,7 +102,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="index.html"><span>No</span><span>ah</span></a>
+							<a class="colorlib-logo" href="index.html"><span>Mo</span><span>hon</span></a>
 						</div>
 						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 					</div>
@@ -139,7 +139,7 @@
 								</div>
 							</a>
 							<div class="desc">
-								<span class="meta">15, Feb 2018</span>
+								<span class="meta">17, Aug 2025</span>
 								<h2><a href="blog.html">A Japanese Constellation</a></h2>
 								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
 							</div>
@@ -154,9 +154,9 @@
 								</div>
 							</a>
 							<div class="desc">
-								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<span class="meta">15, Feb 2025</span>
+								<h2><a href="blog.html">The Healing Power of Forests</a></h2>
+								<p>Forests are more than just trees — they are nature’s lungs, purifying the air and calming our minds. Walking among tall canopies lowers stress and reconnects us with the earth</p>
 							</div>
 						</div>
 
@@ -169,9 +169,9 @@
 								</div>
 							</a>
 							<div class="desc">
-								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<span class="meta">22, Feb 2025</span>
+								<h2><a href="blog.html">Oceans: The Beating Heart of Earth</a></h2>
+								<p>Covering 70% of our planet, oceans regulate climate, sustain life, and inspire awe with their vastness. From coral reefs to deep-sea mysteries, the ocean is a world of wonder we must protect.</p>
 							</div>
 						</div>
 					</div>
@@ -187,9 +187,9 @@
 								</div>
 							</a>
 							<div class="desc">
-								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<span class="meta">25, Feb 2025</span>
+								<h2><a href="blog.html">Mountains and Mindfulness</a></h2>
+								<p>Mountains remind us of resilience, standing tall through centuries of change. Their serene peaks invite reflection, adventure, and peace.</p>
 							</div>
 						</div>
 						
@@ -202,9 +202,9 @@
 								</div>
 							</a>
 							<div class="desc">
-								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<span class="meta">15, march 2025</span>
+								<h2><a href="blog.html">Rivers</a></h2>
+								<p>Rivers carve the land and nurture life, flowing endlessly as a reminder of nature’s rhythm.</p>
 							</div>
 						</div>
 
@@ -217,9 +217,9 @@
 								</div>
 							</a>
 							<div class="desc">
-								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<span class="meta">15, Jan 2025</span>
+								<h2><a href="blog.html">Seasons</a></h2>
+								<p>Each season tells a story — of growth, change, rest, and renewal — shaping the world around us.</p>
 							</div>
 						</div>
 					</div>
@@ -235,9 +235,9 @@
 								</div>
 							</a>
 							<div class="desc">
-								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<span class="meta">11, Jan 2025</span>
+								<h2><a href="blog.html">Wildlife</a></h2>
+								<p>Wildlife keeps ecosystems alive, reminding us of the balance needed between humans and nature.</p>
 							</div>
 						</div>
 
@@ -250,9 +250,9 @@
 								</div>
 							</a>
 							<div class="desc">
-								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<span class="meta">25, Jan 2025</span>
+								<h2><a href="blog.html">Sky</a></h2>
+								<p>The sky shifts in colors and moods daily, painting canvases that inspire wonder and hope.</p>
 							</div>
 						</div>
 
@@ -265,9 +265,9 @@
 								</div>
 							</a>
 							<div class="desc">
-								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<span class="meta">15, July 2025</span>
+								<h2><a href="blog.html">Rain</a></h2>
+								<p>Rain nourishes the earth, turning dry soil into fertile ground and bringing life to all.</p>
 							</div>
 						</div>
 					</div>
