add the link for the footer

--- a/services.html
+++ b/services.html
@@ -291,10 +291,15 @@
                   <div class="testimony">
                     <blockquote>
                       <p>
-                        "A small river named Duden flows by their place and
-                        supplies it with the necessary regelialia.
+                        "Working with Mohon Raihan has been an absolute
+                        pleasure. His attention to detail, creativity, and
+                        user-focused design approach transformed our website
+                        into a modern, intuitive, and engaging experience. He
+                        communicates clearly, delivers on time, and consistently
+                        exceeds expectations. I highly recommend him for any
+                        UI/UX project.
                       </p>
-                      <span>" &mdash; George Brooks</span>
+                      <span>" &mdash; Emran Emon</span>
                     </blockquote>
                   </div>
                 </div>
@@ -304,12 +309,13 @@
                   <div class="testimony">
                     <blockquote>
                       <p>
-                        "Even the all-powerful Pointing has no control about the
-                        blind texts it is an almost unorthographic life One day
-                        however a small line of blind text by the name of Lorem
-                        Ipsum decided to leave for the far World of Grammar.
+                        "Mohon Raihan brought our ideas to life with exceptional
+                        UI/UX designs. His ability to create clean,
+                        user-friendly interfaces while keeping the brand
+                        identity intact is remarkable. He is professional,
+                        reliable, and a true asset to any project.
                       </p>
-                      <span>" &mdash; Daniel Foster</span>
+                      <span>" &mdash; Rajan Das Gupta</span>
                     </blockquote>
                   </div>
                 </div>
@@ -319,11 +325,13 @@
                   <div class="testimony">
                     <blockquote>
                       <p>
-                        "When she reached the first hills of the Italic
-                        Mountains, she had a last view back on the skyline of
-                        her hometown Bookmarksgrove
+                        "Mohon Raihan is an outstanding UI/UX designer. He
+                        delivers designs that are not only visually appealing
+                        but also highly intuitive and functional. His creativity
+                        and dedication made the entire project smooth and
+                        successful.
                       </p>
-                      <span>" &mdash; Liam Jenkins</span>
+                      <span>" &mdash; Rubel Ahmed Rayan</span>
                     </blockquote>
                   </div>
                 </div>
@@ -341,16 +349,19 @@
                 <div class="row">
                   <div class="col-md-10">
                     <h2>Let's Talk</h2>
-                    <p>
-                      A small river named Duden flows by their place and
-                      supplies.
-                    </p>
-                    <p><a href="#">noah@info.com</a></p>
+                    <p>I will be happy to discuss .</p>
+                    <p><a href="#">mohon.raihan@mga.edu</a></p>
                     <p class="colorlib-social-icons">
-                      <a href="#"><i class="icon-facebook4"></i></a>
-                      <a href="#"><i class="icon-twitter3"></i></a>
-                      <a href="#"><i class="icon-googleplus"></i></a>
-                      <a href="#"><i class="icon-dribbble2"></i></a>
+                      <a
+                        href="https://www.linkedin.com/in/m-raihan-839512243/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                        ><i class="icon-linkedin2"></i
+                      ></a>
+                      <a href="https://www.behance.net/mohonraihan "
+                        ><i class="icon-behance2"></i
+                      ></a>
+                      <a href="https://github.com/mohon1020"
+                        ><i class="icon-github"></i
+                      ></a>
                     </p>
                   </div>
                 </div>
@@ -364,7 +375,7 @@
                     style="background-image: url(images/img-1.jpg)"
                   ></a>
                   <div class="desc">
-                    <span>February 15, 2018</span>
+                    <span>August 15, 2025</span>
                     <h3><a href="#">Art Gallery in Japan</a></h3>
                   </div>
                 </div>
@@ -375,7 +386,7 @@
                     style="background-image: url(images/img-2.jpg)"
                   ></a>
                   <div class="desc">
-                    <span>February 9, 2018</span>
+                    <span>August 9, 2025</span>
                     <h3><a href="#">A Japanese Constellation</a></h3>
                   </div>
                 </div>
@@ -386,7 +397,7 @@
                     style="background-image: url(images/img-3.jpg)"
                   ></a>
                   <div class="desc">
-                    <span>February 15, 2018</span>
+                    <span>August 15, 2025</span>
                     <h3><a href="#">Road Trip</a></h3>
                   </div>
                 </div>
@@ -416,16 +427,11 @@
             <div class="row">
               <div class="col-md-12 text-center">
                 <p>
-                  &copy;
-                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                  Copyright &copy;
+                  &copy; Copyright &copy;
                   <script>
                     document.write(new Date().getFullYear());
                   </script>
-                  All rights reserved | This template is made with
-                  <i class="icon-heart4" aria-hidden="true"></i> by
-                  <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                  All rights reserved
                 </p>
               </div>
             </div>
