--- a/work-single.html
+++ b/work-single.html
@@ -242,16 +242,19 @@
                 <div class="row">
                   <div class="col-md-10">
                     <h2>Let's Talk</h2>
-                    <p>
-                      A small river named Duden flows by their place and
-                      supplies.
-                    </p>
-                    <p><a href="#">noah@info.com</a></p>
+                    <p>I will be happy to discuss .</p>
+                    <p><a href="#">mohon.raihan@mga.edu</a></p>
                     <p class="colorlib-social-icons">
-                      <a href="#"><i class="icon-facebook4"></i></a>
-                      <a href="#"><i class="icon-twitter3"></i></a>
-                      <a href="#"><i class="icon-googleplus"></i></a>
-                      <a href="#"><i class="icon-dribbble2"></i></a>
+                      <a
+                        href="https://www.linkedin.com/in/m-raihan-839512243/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                        ><i class="icon-linkedin2"></i
+                      ></a>
+                      <a href="https://www.behance.net/mohonraihan "
+                        ><i class="icon-behance2"></i
+                      ></a>
+                      <a href="https://github.com/mohon1020"
+                        ><i class="icon-github"></i
+                      ></a>
                     </p>
                   </div>
                 </div>
@@ -265,7 +268,7 @@
                     style="background-image: url(images/img-1.jpg)"
                   ></a>
                   <div class="desc">
-                    <span>February 15, 2018</span>
+                    <span>August 15, 2025</span>
                     <h3><a href="#">Art Gallery in Japan</a></h3>
                   </div>
                 </div>
@@ -276,7 +279,7 @@
                     style="background-image: url(images/img-2.jpg)"
                   ></a>
                   <div class="desc">
-                    <span>February 9, 2018</span>
+                    <span>August 9, 2025</span>
                     <h3><a href="#">A Japanese Constellation</a></h3>
                   </div>
                 </div>
@@ -287,7 +290,7 @@
                     style="background-image: url(images/img-3.jpg)"
                   ></a>
                   <div class="desc">
-                    <span>February 15, 2018</span>
+                    <span>August 15, 2025</span>
                     <h3><a href="#">Road Trip</a></h3>
                   </div>
                 </div>
@@ -317,16 +320,11 @@
             <div class="row">
               <div class="col-md-12 text-center">
                 <p>
-                  &copy;
-                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                  Copyright &copy;
+                  &copy; Copyright &copy;
                   <script>
                     document.write(new Date().getFullYear());
                   </script>
-                  All rights reserved | This template is made with
-                  <i class="icon-heart4" aria-hidden="true"></i> by
-                  <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                  All rights reserved
                 </p>
               </div>
             </div>
