modify address and skills

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </div>
 
             <div class="col-md-3 col-sm-6 text-center">
-              <h2 class="progress-head">PSD</h2>
+              <h2 class="progress-head">Adobe XD</h2>
               <div class="progress green">
                 <span class="progress-left">
                   <span class="progress-bar"></span>
@@ -311,6 +311,8 @@ Macon, Georgia</h3>
 											<ul>
 												<li>Master of Science in Information Technology</li>
 												<li>Graduated: August  2025</li>	
+												<li>Alpha Iota Mu (AIM) Honor Society ( July 2025 - Present )</li>
+													
 												
 											</ul>
 										</div>
