--- a/contact.html
+++ b/contact.html
@@ -169,8 +169,8 @@
                   <h3>My Address</h3>
                   <ul class="contact-info">
                     <li>
-                      <span><i class="icon-map5"></i></span>100 University Pkwy,
-                      Macon, GA 31206, United States
+                      <span><i class="icon-map5"></i></span>3991 Norman road,
+                      Atlanta Georgia Zip: 30083, United States
                     </li>
                     <li>
                       <span><i class="icon-phone4"></i></span>+19294008750
